@@ -22,7 +22,6 @@ opensearch-py = "^2.5.0"
 httpx = "^0.27.0"
 dogpile-cache = "^1.3.1"
 colorlog = "^6.8.2"
-sqlalchemy-searchable = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.5"
