@@ -1,4 +1,4 @@
-from resolvers.author import (
+from resolvers.author import (  # search_authors,
     get_author,
     get_author_followers,
     get_author_follows,
@@ -7,12 +7,16 @@ from resolvers.author import (
     get_author_id,
     get_authors_all,
     load_authors_by,
-    search_authors,
     update_author,
 )
 from resolvers.community import get_communities_all, get_community
 from resolvers.editor import create_shout, delete_shout, update_shout
-from resolvers.follower import follow, get_shout_followers, get_topic_followers, unfollow
+from resolvers.follower import (
+    follow,
+    get_shout_followers,
+    get_topic_followers,
+    unfollow,
+)
 from resolvers.notifier import (
     load_notifications,
     notification_mark_seen,
@@ -36,7 +40,12 @@ from resolvers.reader import (
     load_shouts_search,
     load_shouts_unrated,
 )
-from resolvers.topic import get_topic, get_topics_all, get_topics_by_author, get_topics_by_community
+from resolvers.topic import (
+    get_topic,
+    get_topics_all,
+    get_topics_by_author,
+    get_topics_by_community,
+)
 from services.triggers import events_register
 
 events_register()
@@ -52,7 +61,7 @@ __all__ = [
     "load_authors_by",
     "rate_author",
     "update_author",
-    "search_authors",
+    ## "search_authors",
     # community
     "get_community",
     "get_communities_all",
