@@ -4,6 +4,7 @@
 - packages upgrade, isort
 - separated stats queries for author and topic
 - fix: feed featured filter
+- fts search removed
 
 [0.3.2]
 - redis cache for what author follows
